# server-dashboard

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  cli.py
app/modules/: __init__.py  docker_manager.py  k8s_manager.py  log_viewer.py  process_monitor.py  service_manager.py  system_monitor.py
app/ui/: __init__.py  colors.py  dashboard.py
